# mfe_snippets

./: .gitignore
cmake_omp_acc_cce15/: CMakeLists.txt  README.md  myprog.F90
cmake_omp_cce15/: README.md  env.sh
cmake_omp_cce15/cxx/: CMakeLists.txt  main.cc
cmake_omp_cce15/fortran/: CMakeLists.txt  myprog.F90
complex_repro/: Makefile  hip.cpp  repro.F90  repro_hip.F90
phys_mapping/: CMakeLists.txt  README.md  driver_LITE_LOOP.F90  driver_LITE_LOOP_HIP.F90  driver_LITE_LOOP_REVERSED.F90  driver_LITE_LOOP_REVERSED_HIP.F90  driver_LITE_LOOP_REVERSED_HOIST.F90  env.sh  hip.cpp  phys_driver.F90  phys_mod.F90
phys_mapping/pauls_scripts/: env.sh  script.sh
